@@ -114,6 +114,7 @@
  * #2025 (The lack of Bonmin generates an error during example compilation)
  * #2031 (Multi-objective optimization example question)
  * #2032 (Documentation of NAIS)
+ * #2123 (MixtureClassifier 'grade' method does not work with a Sample input)
 
 
 == 1.18 release (2021-11-10) == #release-1.18
